metabolights-webapps/src/main/webapp/css/metabolights.css
/*
 * EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 * Cheminformatics and Metabolism group
 *
 * European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
 *
 * Last modified: 2014-Aug-20
 * Modified by:   Venkata Chandrasekhar Nainala
 *
 * Copyright 2015 EMBL - European Bioinformatics Institute
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 */

.Share_study{
    font-size: 0.7em !important;
    color: #209AD6;
}

.lp20{
    padding-left: 20px !important;
}

body{
    margin: 0 auto !important;
}

.metabolite-title{
    background-color: #f1f1f4;
    padding: 10px 10px;
    margin-bottom: 5px;
    border-radius: 5px 5px 0 0;
}

.metabolite-title h2{
    margin: 0;
    padding: 0 0 0 20px;
    display: inline;
}

.metabolite-title h3{
    display: inline;
    margin: 3px;
}


.metabolite-image{
    width: 100%;
    height: auto;
}

.metabolite-wrapper{
    border: 1px solid #f1f1f4;
    padding: 20px 20px;
    min-height: 100vh;
}

.tab-content {
    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    padding: 10px;
}

.nav-tabs {
    margin-bottom: 0;
}


.mltable th {
    background-color: transparent !important;
}

.mltable {
    width: 100%;
    overflow-x: hidden;
}

.mltable td {
    overflow-x: hidden;
}

.wrap-content{
    word-wrap: break-word;
    overflow-x: hidden !important;
    max-width: 500px;
}

.study-select{
    width:100%;
}

.section-content{
    min-height: 50vh;
}

.ml-wrapper{
    min-height: 100vh;
}

.ml_vnb{
    padding: 0;
}

.nav-pills > li > a{
    border-radius: 0;
    font-size: 0.9em;
}

.nav-pills > li.active > a, .nav-pills > li.active > a:focus, .nav-pills > li.active > a:hover {
    background-color: #f1f1f4;
    color: #000;
}

.ml_vntc{
    border: none;
    padding-top: 0;;
}

.ml_mtc{
    min-height: 80vh;
}

.abs{
    overflow: auto;
}

.ml_tr{
    border-bottom: 1px solid #f1f1f4;
    padding: 5px 0;
}

.ml_trc{
    padding: 5px 15px;
    overflow: auto;
}

.ml_tb{
    margin: 5px;
    border: 1px solid #f1f1f4;
}

.ml--btngrpoup{
    margin-top: 3px;
}

/*
    Metabolights study beta page CSS
*/

.study--wrapper{
    background-color: #f1f1f4;
    padding: 15px 10px;
    border-radius: 2px;
    margin-top: 20px;
    padding-bottom: 20px;
}

.study--wrapper hr{
    border-color: #DBDCDE;
    margin-bottom: 10px;
    margin: 10px;
}

.study--description{
    padding: 15px 10px;
    font-size: 14px;
}

.study--title{
    color: #2c3e50;
    font-weight: 400;
    font-size: 26px;
    padding: 0px 15px;
}

.study--subtitle{
    color: #2c3e50;
    font-size: 16px;
    margin: 10px;
}

.study--id{
    color: #2E789A;
}

.study--description{
    padding: 5px 15px;
    font-size: 14px;
}

.study--infopanel{
    display: inline-block;
    width: calc(100% - 20px);
    margin: 15px 10px 5px 10px;

    border-top: 3px solid #C4C4C4;
    border-bottom: 1px solid #DBDCDE;

    padding: 20px 10px 10px 10px;
}

.study--infopanel p{
    padding: 0;
}

.tabs--wrapper{
    padding: 10px;
}

.study--tabcontent{
    background-color: white;
    min-height: 300px;
    padding: 20px;
}

.no--padding{
    padding: 0 !important;
}

.collapse{
    min-height: 36px;
    min-width: 36px;
    height: auto;
    width: auto;
}

table.dataTable {
    padding: 0;
    border-radius: 2px !important;
}

.dataTable th {
    background-color: #fff;
}

table.assayTable {
    padding: 0;
    border-radius: 2px !important;
}

.assayTable th {
    background-color: #fff;
}

table.filesTable {
    padding: 0;
    border-radius: 2px !important;
}

.filesTable th {
    background-color: #fff;
}

table.maf th{
    background-color: #fff;
}

table.maf {
    padding: 0;
    border-radius: 2px !important;
}


table.maf.clean {
    border: 1px solid #ddd;
    margin: 0px;
}

.scrollStyle
{
    overflow-x:auto;
}

a:link.hyperlinks{
    color: #333 !important;
    padding: 25px 25px;
}


#study-metabolitesicon.icon-conceptual::before {
    font-size: 100% !important;
}

.dropdown-menu > li > a {
    border-bottom: none;
}

.panel-heading span {
    margin-top: -20px;
    font-size: 15px;
}
.row {
    padding: 0 10px;
}
.clickable {
    cursor: pointer;
}

.ml--icons{
    font-size: 1.38em !important;
}


.ml--loading{
    min-height: 50vh;
    background:url("/metabolights/img/beta_loading.gif") center center no-repeat;
}

.ml--inline{
    display: inline;
}

.ml--studytitle{
    display: block;
    margin-top: 10px;
}

.ml--bordertop{
    margin-top: 10px;
    border-top: 1px solid #CDCDCD;
}

.ml--studydescription{
    display: block;
}

.ml--button{
    color: #fff !important;
}

.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0 6px 6px 6px;
}

#metExploreContainer{
    min-height: 500px;
}

#metExploreContainer iframe{
    position: absolute !important;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #ccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #fff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px;
}


a:link.btn-ok{
    color: #fff !important;
}

.thorOrcIdSpan img{
    height: 15px;
    width: 15px;
}

.mini--banner{

}

